[package]
name = "kauhanen"
version = "0.1.0"
authors = ["ISO"]

links = "./fmodex64_vc.lib"
build = "build.rs"

[dependencies]
serde_json = "1.0"
find_folder = "0.3.0"
piston_window = "0.120.0"
piston2d-sprite = "0.64.0"
pistoncore-sdl2_window = "0.67.0"
image = "0.23.14"
gfx = "0.18.2"
gfx_core = "*"
gfx_device_gl = "0.16.2"

winit = "0.25.0"

vecmath = "1.0.0"
rand = "0.8.4"
fmod-sys = { git = "https://github.com/khonsulabs/fmod-sys.git", features = ["studio"] }

